     interface routines gather_grid, scatter_grid, valid for all FFT grids
     and for both real and complex arrays; realspace_grid_init_custom and
     realspace_grids_init merged into realspace_grid_init, for each grid
   * __STD_F95 preprocessing option removed: all compilers that do not allow
     allocatable arrays in derived types are no longer supported

New in svn version:

   * PW: Hybrid functionals with reduced cutoff for Vx\psi should now work
         also with k-points and for stress calculation
   * PW: real-space treatment of augmentation charges in USPP and PAW can 
         be used in (fixed-cell) structural relaxation as well
   * PW: speedup of USPP with full G-space treatment of augmentation charges
   * PW: Hybrid functionals for USPP now working

Fixed in svn version:

   * PP: projwfc.x wasn't working any longer for noncolinear case without
     spin-orbit in 5.1.x versions
   * PW: ordering of beta functions incorrect in USPP + hybrid functionals.
   * PW: floating-point error could occur in rVV10 functional

New in 5.1.2 version:

   * PW: Hybrid functionals for USPP and PAW still have problems, disabled
   * code "molecularpdos.x" computing PDOS on selected molecular orbitals
     separately computed (courtesy of Guido Fratesi)
   * TDDFPT: a few more options, improved documentation, compatibility
     with "Environ" plugin
   * Added spin-polarized b86r exchange (courtesy of Ikutaro Hamada)

Incompatible changes in 5.1.2 version:

   * XSpectra: variable ef_r, used to eliminate the occupied states
               from the spectrum, replaced by new variable xe0  
   * PHonon: input variable iverbosity => verbosity
   * The (undocumented) *.evp file of CP uses a slightly different format
     (equally undocumented) since v.5.1.1. In order to use original format,
     compile with __OLD_FORMAT preprocessing variable on.

Fixed in 5.1.2 version:

   * Option wf_collect wasn't working with LSDA and one k-point per pool