@@ -37,6 +37,7 @@ fft_types.o \
 funct.o \
 generate_function.o \
 griddim.o \
+gth.o \
 input_parameters.o \
 io_files.o \
 io_global.o  \
